// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option /> should render with correct name and value 1`] = `
<option
  class="styles__Option-sc-1q1emy4-0 gHUAlZ"
  role="option"
  value="actualValue"
>
  children
</option>
`;

exports[`<Option /> should render with fallback value 1`] = `
<option
  class="styles__Option-sc-1q1emy4-0 gHUAlZ"
  role="option"
  value="children"
>
  children
</option>
`;

exports[`<Option /> should render with highlighted style 1`] = `
<option
  class="styles__Option-sc-1q1emy4-0 gfiWWV"
  role="option"
  value="children"
>
  children
</option>
`;
